--- a/style.css
+++ b/style.css
@@ -183,18 +183,16 @@ h5 {
   gap: 5px;
 }
 
-.modify,
+.detail,
 .delete {
   font-size: 12px;
   padding: 4px 6px;
   border: none;
-  border-radius: 4px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.modify {
-  background: #ffd700;
-}
+
 
 .delete {
   background: #ff4d4d;
@@ -484,3 +482,62 @@ h4 {
   flex-grow: 1;
   overflow-y: auto;
 } */
+
+
+
+
+
+
+
+.modal-bg {
+  display: flex;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.5);
+  z-index: 3;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-box {
+  background: #fff;
+  width: 300px;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  text-align: center;
+}
+
+.profile-pic {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  display: block;
+  margin: 10px auto;
+}
+
+.close-btn {
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.info, .company {
+  margin-top: 10px;
+  text-align: left;
+}
+
+
+
+
+
+#lesexperiencedetails {
+  max-height: 200px; /* or any height you prefer */
+  overflow-y: auto;
+  padding-right: 10px; /* optional: avoids scrollbar overlap */
+}
+
