--- a/style.css
+++ b/style.css
@@ -113,16 +113,11 @@ h5 {
 .input-ajout {
   display: flex;
   gap: 10px;
+  justify-content: center;
+  margin-left : 30px;
 }
 
-.search-input {
-  flex: 1;
-  padding: 8px;
-  border-radius: 6px;
-  border: none;
-  background-color: #1a1f2b;
-  color: #00ff88;
-}
+
 
 .ajoute-btn {
   width: 40px;
@@ -134,6 +129,7 @@ h5 {
   font-size: 20px;
   cursor: pointer;
   border : 2px solid;
+
 }
 
 .grid-cards {
@@ -396,13 +392,13 @@ h5 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 140px;
+  width: 100px;
   padding: 4px 8px;
-  border: 1px solid #ccc;
+  border: 2px solid rgb(152, 138, 138);
   border-radius: 5px;
   font-size: 12px;
   margin-top: 4px;
-  background: #fff;
+  background: rgb(152, 138, 138);
   margin-left: 5px;
 }
 
@@ -439,6 +435,7 @@ h4 {
 
   color: white;
   text-align : center ;
+  margin-top: 0 ;
 
 }
 
@@ -450,7 +447,8 @@ h4 {
   display: grid;
   grid-template-columns: 50% 50% ;
   /* gap: 5px; */
-  padding: 5px;
+  padding: 5px 5px  10px 20px;
+  
  
 
 }
